name:                blaze-react
version:             0.1.0.0
synopsis:            Experimental ReactJS bindings for GHCJS.
description:         ReactJS is a library by Facebook that supports
                     efficiently updating the DOM in a pure fashion using a
                     virtual DOM as an intermediary.

                     The bindings expose an API based on blaze-html for
                     rendering and simple state machines for managing
                     application updates.


license:             MIT
license-file:        LICENSE
author:              Simon Meier, Alex Sayers
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  reactjs-bindings/lib.require.js
                     reactjs-bindings/LICENSE
                     README.markdown

flag build-example
  description: build the example program
  default: False
  manual: True

library
  js-sources: jsbits/global-react.js
              reactjs-bindings/lib.js
  ghcjs-options: -O -Wall
  exposed-modules:     Text.Blaze
                       Text.Blaze.Renderer.String
                       Text.Blaze.Renderer.ReactJS
                       Text.Blaze.Html5
                       Text.Blaze.Html5.Attributes
                       Text.Blaze.Event
                       Text.Blaze.Event.Keycode
                       Text.Blaze.Event.Charcode

                       Text.Blaze.Internal

                       Blaze.React
                       Blaze.React.Run.ReactJS
                       Blaze.React.Examples.Todo
                       Blaze.React.Examples.Clock
                       Blaze.React.Examples.MultiUser
                       Blaze.React.Examples.TimeMachine
                       Blaze.React.Examples.TabbedApps

  build-depends:       base >=4.7 && <4.8,
                       bytestring,
                       either,
                       ghcjs-base,
                       ghcjs-ffiqq,
                       ghcjs-prim,
                       hashable,
                       lens,
                       mtl,
                       pretty-show,
                       text,
                       transformers,
                       time,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable todomvc
  if !flag(build-example)
      buildable: False
  Main-Is:        todo-main.hs
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  hs-source-dirs: todomvc
  Build-Depends:  base                >= 4    &&  < 5,
                  blaze-react
  ghcjs-Options:  -O -Wall
