name:                blaze-react
version:             0.2.0.0
synopsis:            Experimental ReactJS bindings for GHCJS.
description:         ReactJS is a library by Facebook that supports
                     efficiently updating the DOM in a pure fashion using a
                     virtual DOM as an intermediary.

                     The bindings expose an API based on blaze-html for
                     rendering and simple state machines for managing
                     application updates.


license:             MIT
license-file:        LICENSE
author:              Simon Meier, Alex Sayers
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  reactjs-bindings/lib.require.js
                     reactjs-bindings/LICENSE
                     README.markdown

flag build-example
  description: build the example program
  default: False
  manual: True

library
  js-sources: jsbits/global-react.js
              reactjs-bindings/lib.js
  ghcjs-options: -O -Wall
  exposed-modules:     Text.Blaze
                       Text.Blaze.Event
                       Text.Blaze.Event.Charcode
                       Text.Blaze.Event.Keycode
                       Text.Blaze.Html5
                       Text.Blaze.Html5.Attributes
                       Text.Blaze.Svg
                       Text.Blaze.Svg.Attributes
                       Text.Blaze.Renderer.ReactJS
                       Text.Blaze.Renderer.String

                       Text.Blaze.Internal
                       Text.Blaze.Event.Internal

                       Blaze.Core
                       Blaze.Core.Examples.Clock
                       Blaze.Core.Examples.SocketTest
                       Blaze.Core.Examples.TabbedApps
                       Blaze.Core.Examples.Todo
                       Blaze.Core.Examples.TimeMachine
                       Blaze.Core.Service.Socket

                       Blaze.ReactJS.Base
                       Blaze.ReactJS.Run
                       Blaze.ReactJS.Examples.Clock
                       Blaze.ReactJS.Examples.SocketTest
                       Blaze.ReactJS.Examples.TabbedApps
                       Blaze.ReactJS.Examples.Todo
                       Blaze.ReactJS.Examples.TimeMachine
                       Blaze.ReactJS.Service.Socket


  build-depends:       aeson                == 0.8.*
                     , base                 >=4.7     && <4.8
                     , bytestring           >= 0.10.4 && < 0.11
                     , either               == 4.*
                     , ghcjs-base
                     , ghcjs-ffiqq
                     , ghcjs-prim
                     , hashable             == 1.2.*
                     , lens                 == 4.*
                     , mtl                  == 2.*
                     , pretty-show          == 1.*
                     , profunctors          == 4.*
                     , QuickCheck           == 2.6.*
                     , testing-feat         == 0.4.*
                     , text                 == 1.*
                     , transformers         == 0.4.*
                     , time                 == 1.4.*
                     , unordered-containers == 0.2.*
                     , void                 == 0.7.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example-app
  if !flag(build-example)
      buildable: False
  Main-Is:        example-main.hs
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  hs-source-dirs: example-app
  Build-Depends:  base                >= 4    &&  < 5,
                  blaze-react
  ghcjs-Options:  -O -Wall
