name:                ghcjs-vdom
version:             0.1.0.0
synopsis:            Experimental virtual-dom bindings for GHCJS
description:         Virtual-dom is a library for fast incremental DOM
                     updates by comparing virtual immutable DOM trees to
                     find a minimal number of changes to update the actual DOM.

                     The bindings support memoized nodes which are only
                     recomputed when the underlying data changes, using
                     referential equality for the function and arguments.

                     The diff procedure in the virtual-dom library has been
                     modified slightly to support computing a diff in an
                     asynchronous thread. Since computing a diff forces all data
                     around the virtual-dom tree, the computation, the computation
                     can be expensive.

                     An asynchronous diff computation can be safely aborted
                     with an async exception.

license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  virtual-dom/lib.require.js
                     virtual-dom/diff.js
                     virtual-dom/LICENSE
                     virtual-dom/handle-thunk.js
                     data/example.css
                     README.markdown

flag build-example
  description: build the example program
  default: False
  manual: True

library
  js-sources: jsbits/utils.js
              jsbits/vdom.js
              virtual-dom/lib.js
  ghcjs-options: -O2 -Wall
  exposed-modules:     GHCJS.VDOM
                       GHCJS.VDOM.QQ
  other-modules:       GHCJS.VDOM.Internal
  build-depends:       base >=4.7 && <4.8,
                       ghcjs-ffiqq,
                       ghcjs-base,
                       ghcjs-prim,
                       split,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example
  if !flag(build-example)
      buildable: False
  Main-Is:        Example.hs
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  hs-source-dirs: example
  Build-Depends:  base                >= 4    &&  < 5,
                  ghcjs-ffiqq,
                  ghcjs-vdom,
                  containers,
                  ghcjs-base
  ghcjs-Options:    -O -Wall
