name:                ghcjs-vdom
version:             0.1.0.0
synopsis:            Experimental virtual-dom bindings for GHCJS
description:         Virtual-dom is a library for fast incremental DOM
                     updates by comparing virtual immutable DOM trees to
                     find a minimal number of changes to update the actual DOM.

                     The bindings support memoized nodes which are only
                     recomputed when the underlying data changes, using
                     referential equality for the function and arguments.

                     The diff procedure in the virtual-dom library has been
                     modified slightly to support computing a diff in an
                     asynchronous thread. Since computing a diff forces all data
                     around the virtual-dom tree, the computation, the computation
                     can be expensive.

                     An asynchronous diff computation can be safely aborted
                     with an async exception.

license:             MIT
license-file:        LICENSE
author:              Simon Meier, Luite Stegeman
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  reactjs-bindings/lib.require.js
                     reactjs-bindings/LICENSE
                     README.markdown

flag build-example
  description: build the example program
  default: True
  manual: True

library
  ghcjs-options: -O -Wall
  exposed-modules:     Text.Blaze
                       Text.Blaze.Renderer.String
                       Text.Blaze.Renderer.ReactJS
                       Text.Blaze.Html5
                       Text.Blaze.Html5.Attributes

                       Text.Blaze.Internal 

  build-depends:       base >=4.7 && <4.8,
                       ghcjs-base,
                       ghcjs-prim,
                       split,
                       text,
                       bytestring,
                       template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010

executable todomvc
  js-sources: jsbits/global-react.js
              reactjs-bindings/lib.js
  if !flag(build-example)
      buildable: False
  Main-Is:        todo-main.hs
  Other-Modules:  TodoApp
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  hs-source-dirs: todomvc
  Build-Depends:  base                >= 4    &&  < 5,
                  containers,
                  either,
                  ghcjs-vdom,
                  ghcjs-base,
                  ghcjs-ffiqq,
                  ghcjs-prim,
                  lens,
                  safe,
                  text,
                  time
  ghcjs-Options:  -O -Wall
