name:                blaze-react-server-side
version:             0.1.0.0
synopsis:            Server-side execution of blaze-react apps.
description:         This is an experimental library exploring a design for
                     writing GUI apps in a compositional and portable fashion.
                     The rendering is based on using Facebooks ReactJS and
                     ReactNative to achieve proper web/native UI's. The
                     compositionality is achieved by separating the UI state
                     and state transitions from the concrete rendering
                     backend.

license:             MIT
license-file:        LICENSE
author:              Simon Meier, Alex Sayers
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options: -Wall

  hs-source-dirs:      src

  exposed-modules:
      Blaze.Core

      Blaze.Core.Examples.Clock
      Blaze.Core.Examples.SocketTest
      Blaze.Core.Examples.TabbedApps
      Blaze.Core.Examples.Todo
      Blaze.Core.Examples.TimeMachine

      Text.Blaze.Event
      Text.Blaze.Event.Charcode
      Text.Blaze.Event.Keycode
      Text.Blaze.Html5
      Text.Blaze.Html5.Attributes
      Text.Blaze.Svg
      Text.Blaze.Svg.Attributes
      Text.Blaze.Renderer.String

  build-depends:
      aeson
    , base
    , bytestring
    , either
    , hashable
    , lens
    , mtl
    -- , pretty-show
    , profunctors
    , QuickCheck
    -- , testing-feat
    , text
    , transformers
    , time
    , unordered-containers
    , void

