name:                blaze-react-dev-mode-client
version:             1.0.0
synopsis:            Development-mode client for blaze-react.
description:         The client library for a development mode for blaze-react
                     that allows testing a blaze-react app while serving over
                     HTTP from GHCi.

license:             MIT
license-file:        LICENSE
author:              Simon Meier
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable
  default-language:    Haskell2010
  ghc-options: -Wall

  hs-source-dirs:      src
  main-is:             dev-mode-client.hs


  build-depends:
      base
    , blaze-react-core
    , blaze-react-spa
    , blaze-react-dev-mode-shared
    , ghcjs-servant-client
    -- , either
    -- , hashable
    -- , http-media
    -- , lens
    -- , mtl
    -- , wai
    -- , warp
    -- , profunctors
    -- , QuickCheck
    -- , servant
    -- , servant-blaze-react
    -- , servant-docs
    -- , servant-server
    -- , stm
    -- , text
    -- , transformers
    -- , time
    -- , unordered-containers
    -- , void

