name:                blaze-react-core
version:             1.0.0
synopsis:            Pure and core part of blaze-react.
description:         This is an experimental library exploring a design for
                     writing GUI apps in a compositional and portable fashion.
                     Applications are written as reactive, deterministic
                     state-machines (similar to Mealy machines) and rendered
                     to an HTML AST that can be rendered to Facebooks ReactJS
                     DOM model.

license:             MIT
license-file:        LICENSE
author:              Simon Meier, Alex Sayers
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options: -Wall

  hs-source-dirs:      src

  exposed-modules:
      Blaze.Core

      Text.Blaze
      Text.Blaze.Event
      Text.Blaze.Event.Charcode
      Text.Blaze.Event.Keycode
      Text.Blaze.Html5
      Text.Blaze.Html5.Attributes
      Text.Blaze.Svg
      Text.Blaze.Svg.Attributes
      Text.Blaze.Renderer.String

      Text.Blaze.Event.Internal
      Text.Blaze.Internal

  build-depends:
      aeson
    , base
    , bytestring
    , either
    , hashable
    , lens
    , mtl
    , profunctors
    , QuickCheck
    , text
    , transformers
    , time
    , unordered-containers
    , vector
    , void

