name:                blaze-react-core
version:             1.0.0
synopsis:            Pure and core part of blaze-react.
description:         This is an experimental library exploring a design for
                     writing GUI apps in a compositional and portable fashion.
                     Applications are written as reactive, deterministic
                     state-machines (similar to Mealy machines) and rendered
                     to an HTML AST that can be rendered to Facebooks ReactJS
                     DOM model.

license:             MIT
license-file:        LICENSE
author:              Simon Meier, Alex Sayers
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options: -Wall

  hs-source-dirs:      src

  exposed-modules:
      Blaze.React.Core

      Blaze.React.Html5
      Blaze.React.Html5.Attributes
      Blaze.React.Html5.Event
      Blaze.React.Html5.Event.Charcode
      Blaze.React.Html5.Event.Keycode
      Blaze.React.Html5.Event.Internal

      Blaze.React.Markup
      Blaze.React.Markup.Internal
      Blaze.React.Markup.Renderer.String

      Blaze.React.Svg
      Blaze.React.Svg.Attributes


  if impl(ghcjs)
    build-depends:
        ghcjs-base
      , aeson
      , base
      , bytestring
      , either
      , hashable
      , lens
      , mtl
      , profunctors
      , QuickCheck
      , text
      , transformers
      , time
      , unordered-containers
      , vector
      , void
  else
    build-depends:
        aeson
      , base
      , bytestring
      , either
      , hashable
      , lens
      , mtl
      , profunctors
      , QuickCheck
      , text
      , transformers
      , time
      , unordered-containers
      , vector
      , void
