name:                blaze-react-dev-mode-shared
version:             1.0.0
synopsis:            Code shared between the dev-mode client app and the server library
description:         All code that can be trivially shared between the client
                     and the server of the development mode; i.e., all code
                     that compiles both with GHC and GHCJS.

license:             MIT
license-file:        LICENSE
author:              Simon Meier
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options: -Wall

  hs-source-dirs:      src

  exposed-modules:
      Blaze.Development.Client
      Blaze.Development.Internal.ConsoleRunner
      Blaze.Development.Internal.Logger
      Blaze.Development.Internal.Types
      Blaze.Development.ProxyApi

  build-depends:
      aeson
    , base
    , bytestring
    , blaze-react-core
    , either
    , lens
    , mtl
    , servant
    , servant-docs
    , stm
    , text
    , time
    , transformers

