name:                blaze-react-spa
version:             0.2.0
synopsis:            Run blaze-react apps as single-page apps using ReactJS.
description:         Bindings to ReactJS that allow running a blaze-react app
                     as a client-side single-page application.

license:             MIT
license-file:        LICENSE
author:              Simon Meier, Alex Sayers
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  reactjs-bindings/lib.require.js
                     reactjs-bindings/LICENSE
                     README.markdown

library
  default-language:    Haskell2010
  js-sources: jsbits/global-react.js
              jsbits/blaze-react-reactjs-bindings.js
  ghcjs-options: -O -Wall
  exposed-modules:
                       Text.Blaze.Renderer.ReactJS

                       Blaze.ReactJS.Base
                       Blaze.ReactJS.Run

  build-depends:       base
                     , blaze-react-core
                     , bytestring
                     , either
                     , ghcjs-base
                     , ghcjs-prim
                     , hashable
                     , lens
                     , mtl
                     , pretty-show
                     , profunctors
                     , QuickCheck
                     , testing-feat
                     , text
                     , transformers
                     , time
                     , unordered-containers
                     , void

  hs-source-dirs:      src


-- executable dummy-app
--   default-language:    Haskell2010
--
--   ghcjs-options: -Wall
--   hs-source-dirs:     main-src
--   main-is:            dummy-app.hs
--
--   build-depends:
--       base
--     , blaze-react-core
--     , blaze-react-spa

executable dev-mode-client
  default-language:    Haskell2010

  ghcjs-options: -Wall
  hs-source-dirs:     main-src
  main-is:            dev-mode-client.hs

  build-depends:
      base
    , blaze-react-core
    , blaze-react-spa
    , blaze-react-dev-mode-shared
    , either
    , ghcjs-base
    , ghcjs-servant-client
    , servant
    , text


