name:                blaze-react-spa
version:             0.2.0
synopsis:            Run blaze-react apps as single-page apps using ReactJS.
description:         Bindings to ReactJS that allow running a blaze-react app
                     as a client-side single-page application.

license:             MIT
license-file:        LICENSE
author:              Simon Meier, Alex Sayers
maintainer:          iridcode@gmail
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  reactjs-bindings/lib.require.js
                     reactjs-bindings/LICENSE
                     README.markdown

library
  js-sources: jsbits/global-react.js
              jsbits/blaze-react-reactjs-bindings.js
  ghcjs-options: -O -Wall
  exposed-modules:
                       Text.Blaze.Renderer.ReactJS

                       Blaze.ReactJS.Base
                       Blaze.ReactJS.Run

  build-depends:       base
                     , blaze-react-core
                     , bytestring
                     , either
                     , ghcjs-base
                     , ghcjs-prim
                     , hashable
                     , lens
                     , mtl
                     , pretty-show
                     , profunctors
                     , QuickCheck
                     , testing-feat
                     , text
                     , transformers
                     , time
                     , unordered-containers
                     , void

  hs-source-dirs:      src
  default-language:    Haskell2010

